# qubic-infra

./: .gitignore  Especificaciones del Contrato Inteligente_ AegisRegistry.cpp.md  README.md  codearch.md  package-lock.json  package.json  panama_legal_integration.md  technical_report.md
backend/: package-lock.json  package.json  seed_data.js
backend/src/: index.js
backend/src/controllers/: assetController.js
backend/src/db/: database.js
backend/src/middleware/: errorHandler.js  upload.js  validators.js
backend/src/routes/: assets.js  index.js
backend/src/utils/: qubicCrypto.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Marketplace.jsx  RegisterAsset.jsx
qubic-contracts/: AegisRegistry.cpp  AegisRegistry.h  CMakeLists.txt
